# blackwell

./: .env.example  .gitignore  README.md  Shoulder_report.md  app.py  evaluator_output.csv  pyproject.toml  shoulder.txt  web_app.py
blackwell/: agent.py  anamnesis.py  config.py  db_handler.py  document_processer.py  evaluation.py  evaluator.py  prompts.py  pubmed.py  pubmed_tools.py  rag_tools.py  utils.py
evaluation/: aip.py  anamnesis_output.csv  evaluator_output.csv  evaluator_raw.csv  evaluator_scoring_results.csv  evaluator_stock.csv
evaluation/notebooks/: data_analysis.ipynb  evaluation.ipynb  indexing.ipynb
evaluation/scores/: evaluator_report_scores.csv  gemini_raw_report_scores.csv  gemini_wa_report_scores.csv
static/: anamnesis.js  app.js  evaluation.js  styles.css
templates/: anamnesis.html  chat.html  evaluation.html  index.html
