[project]
name = "blackwell"
version = "0.0.2"
description = "Agentic Clinical Decision Support System powered by LLMs and RAG."
authors = [
    { name = "Lukas Torquato" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.55",
    "langchain>=0.3.10",
    "langchain-core>=0.3.30",
    "langchain-community>=0.3.9",
    "langchain-ollama>=0.2.1",
    "langchain_google_genai>=2.1.1",
    "httpx>=0.28.1",
    "tqdm>=4.66.1",
    "pypdf>=3.17.1",
    "python-dotenv==1.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blackwell"]

[tool.setuptools.package-dir]
"blackwell" = "blackwell/"