[project]
name = "blackwell"
version = "0.0.2"
description = "Multi-Agent Clinical Decision Support System"
authors = [
    { name = "Lukas Torquato" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "langgraph>=1.0.1",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain_google_genai>=3.0.0",
    "langsmith>=0.4.41",
    "httpx>=0.28.1",
    "tqdm>=4.66.1",
    "pypdf>=3.17.1",
    "python-dotenv==1.0.1",
    "pydantic>=2.12.3",
    "pydantic_core>=2.41.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blackwell"]

[tool.setuptools.package-dir]
"blackwell" = "blackwell/"